# school-sis

./: .dockerignore  .env.example  .gitignore  .graphifyignore  .vercelignore  ARCHITECTURE_DECISIONS.md  CONSTRUCT_MAPPING_GUIDE.md  DEPLOY.md  Dockerfile  FEE_COLLECTIONS_SUMMARY.md  MIGRATION_SEQUENCE.md  PROJECT.md  QUICKSTART.md  README.md  RUNNING.md  SECURITY_REPORT.md  SETUP_GUIDE.md  ScholarMind_PRD_V6.docx  ScholarMind_PRD_v2.0.docx  ScholarMind_PRD_v3.0.docx  TEST_INFRA.md  TEST_READY.md  alert.rules  alertmanager.yml  debug_url.txt  docker-compose.yml  insert_e2e_users.sql  npm_audit.json  npm_audit_results.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm_audit.json  prd_v6.txt  prometheus.yml  render.yaml  semgrep_results.json  test_architecture.md  turbo.json  (+2 more)
.husky/: pre-push
services/agents/: Dockerfile  pyproject.toml  requirements.txt
services/agents/sql/: 001_embeddings.sql  002_triggers.sql
services/agents/src/: config.py  main.py  worker.py
services/agents/src/agents/: __init__.py  academ_agent.py  admit_agent.py  attend_agent.py  batch_agent.py  comm_agent.py  compliance_agent.py  domain_agents.py  fee_agent.py  future_agents.py  insight_agent.py  library_agent.py  risk_agent.py  schedul_agent.py  synthesis_agent.py  transport_agent.py
services/agents/src/api/: routes.py
services/agents/tests/: conftest.py  test_agent.py  test_routes.py
services/inference/: Cargo.toml  Dockerfile
services/inference/scripts/: download_models.bat
services/inference/src/: config.rs  embeddings.rs  health.rs  llm.rs  main.rs
(+1215 files in other folders)
